// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton renders a Primary button 1`] = `
.c0 {
  background: #3F51B5;
  border-radius: 0.5rem;
  border: 2px solid #3F51B5;
  cursor: pointer;
  color: #FFFFFF;
  height: 2rem;
  padding: 0.25rem 1rem;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  fill: #FFFFFF;
}

.c0 > svg {
  width: 1.5rem;
  width: 1.5rem;
  fill: currentColor;
}

.c0:hover:not([disabled]) {
  background: #303F9F;
  border: 2px solid #303F9F;
}

.c0:disabled {
  border: 2px solid #BDBDBD;
  background: #BDBDBD;
  color: #BDBDBD;
  fill: #3F51B5;
}

<button
  className="c0"
/>
`;

exports[`PrimaryButton renders a Primary danger button 1`] = `
.c0 {
  background: #F44336;
  border-radius: 0.5rem;
  border: 2px solid #F44336;
  cursor: pointer;
  color: #FFFFFF;
  height: 2rem;
  padding: 0.25rem 1rem;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  fill: #FFFFFF;
}

.c0 > svg {
  width: 1.5rem;
  width: 1.5rem;
  fill: currentColor;
}

.c0:hover:not([disabled]) {
  background: #F44336;
  border: 2px solid #F44336;
}

.c0:disabled {
  border: 2px solid #BDBDBD;
  background: #BDBDBD;
  color: #BDBDBD;
  fill: #3F51B5;
}

<button
  className="c0"
/>
`;

exports[`PrimaryButton renders a disabled Primary button 1`] = `
.c0 {
  background: #3F51B5;
  border-radius: 0.5rem;
  border: 2px solid #3F51B5;
  cursor: pointer;
  color: #FFFFFF;
  height: 2rem;
  padding: 0.25rem 1rem;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  fill: #FFFFFF;
}

.c0 > svg {
  width: 1.5rem;
  width: 1.5rem;
  fill: currentColor;
}

.c0:hover:not([disabled]) {
  background: #303F9F;
  border: 2px solid #303F9F;
}

.c0:disabled {
  border: 2px solid #BDBDBD;
  background: #BDBDBD;
  color: #BDBDBD;
  fill: #3F51B5;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`SecondaryButton renders a SecondaryButton Primary button 1`] = `
.c0 {
  background: #3F51B5;
  border-radius: 0.5rem;
  border: 2px solid #3F51B5;
  cursor: pointer;
  color: #FFFFFF;
  height: 2rem;
  padding: 0.25rem 1rem;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  fill: #FFFFFF;
  background: #FFFFFF;
  border: 2px solid #3F51B5;
  color: #3F51B5;
  fill: #3F51B5;
}

.c0 > svg {
  width: 1.5rem;
  width: 1.5rem;
  fill: currentColor;
}

.c0:hover:not([disabled]) {
  background: #303F9F;
  border: 2px solid #303F9F;
}

.c0:disabled {
  border: 2px solid #BDBDBD;
  background: #BDBDBD;
  color: #BDBDBD;
  fill: #3F51B5;
}

.c0:hover:not([disabled]) {
  background: #3F51B5;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  background: #FFFFFF;
  border: 2px solid #BDBDBD;
  cursor: auto;
}

<button
  className="sc-AxjAm c0"
  disabled={true}
/>
`;

exports[`SecondaryButton renders a SecondaryButton button 1`] = `
.c0 {
  background: #3F51B5;
  border-radius: 0.5rem;
  border: 2px solid #3F51B5;
  cursor: pointer;
  color: #FFFFFF;
  height: 2rem;
  padding: 0.25rem 1rem;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  fill: #FFFFFF;
  background: #FFFFFF;
  border: 2px solid #3F51B5;
  color: #3F51B5;
  fill: #3F51B5;
}

.c0 > svg {
  width: 1.5rem;
  width: 1.5rem;
  fill: currentColor;
}

.c0:hover:not([disabled]) {
  background: #303F9F;
  border: 2px solid #303F9F;
}

.c0:disabled {
  border: 2px solid #BDBDBD;
  background: #BDBDBD;
  color: #BDBDBD;
  fill: #3F51B5;
}

.c0:hover:not([disabled]) {
  background: #3F51B5;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  background: #FFFFFF;
  border: 2px solid #BDBDBD;
  cursor: auto;
}

<button
  className="sc-AxjAm c0"
/>
`;

exports[`SecondaryButton renders a SecondaryButton danger button 1`] = `
.c0 {
  background: #F44336;
  border-radius: 0.5rem;
  border: 2px solid #F44336;
  cursor: pointer;
  color: #FFFFFF;
  height: 2rem;
  padding: 0.25rem 1rem;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  fill: #FFFFFF;
  background: #FFFFFF;
  border: 2px solid #D32F2F;
  color: #D32F2F;
  fill: #D32F2F;
}

.c0 > svg {
  width: 1.5rem;
  width: 1.5rem;
  fill: currentColor;
}

.c0:hover:not([disabled]) {
  background: #F44336;
  border: 2px solid #F44336;
}

.c0:disabled {
  border: 2px solid #BDBDBD;
  background: #BDBDBD;
  color: #BDBDBD;
  fill: #3F51B5;
}

.c0:hover:not([disabled]) {
  background: #D32F2F;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  background: #FFFFFF;
  border: 2px solid #BDBDBD;
  cursor: auto;
}

<button
  className="sc-AxjAm c0"
/>
`;
